@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2013/07/21 14:05:36 shattered Exp $
+$NetBSD: distinfo,v 1.3 2013/08/27 16:40:11 shattered Exp $
 
-SHA1 (dcc-1.3.147.tar.Z) = 38c60733b8f0d3bb58d41c34138e7ac81fcc4f20
-RMD160 (dcc-1.3.147.tar.Z) = b72b63e533c2b6aecd6911e1177dcb535ba687dc
-Size (dcc-1.3.147.tar.Z) = 1706836 bytes
+SHA1 (dcc-1.3.123.tar.Z) = 3127cdde1ce374fbc5ef08fa5103cffcf93b99ee
+RMD160 (dcc-1.3.123.tar.Z) = c7b0cedba3feffc4ad7c94249a56303c7f09bf2b
+Size (dcc-1.3.123.tar.Z) = 1663943 bytes
