@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.3115 2013/08/27 16:09:00 taca Exp $
+$NetBSD: CHANGES-2013,v 1.3116 2013/08/27 16:40:10 shattered Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -4494,3 +4494,4 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated textproc/ruby-text to 1.2.3 [obache 2013-08-27]
 	Updated www/contao31 to 3.1.2 [taca 2013-08-27]
 	Updated www/contao31-example to 3.1.2 [taca 2013-08-27]
+	Updated mail/dcc to 1.3.123nb2 [shattered 2013-08-27]
